apps/web_stock_future/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-stock-future-ingress
  namespace: web-stock-future
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - api.iprime.primecapitalvn.com
        - iprime.primecapitalvn.com
        - test.tool.iprime.nefyo.com
      secretName: web-stock-future-cert-secret
  rules:
    - host: api.iprime.primecapitalvn.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-stock-future-backend-service
                port:
                  number: 7000
    - host: iprime.primecapitalvn.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-stock-future-frontend-service
                port:
                  number: 7001
    - host: test.tool.iprime.nefyo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-stock-future-runner-service-test
                port:
                  number: 5051
